# q-contracts

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci-build.yml  pr-lint.yml
adrs/: ADR-0300-Consumption-Unit.md  README.md
adrs/puml/: ADR-0300-consumption-unit-creation.puml
contracts/consumption-unit/: Cargo.toml
contracts/consumption-unit/examples/: schema.rs
contracts/consumption-unit/fixtures/: init.json
contracts/consumption-unit/schema/: consumption-unit.json
contracts/consumption-unit/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  types.rs
contracts/cw20/: Cargo.toml
contracts/cw20/examples/: schema.rs
contracts/cw20/fixtures/: increase_allowance.json
contracts/cw20/schema/: cw20-copy.json
contracts/cw20/src/: lib.rs
scripts/: schema.sh
