[package]
name = "cw20-copy"
description = "fork of the standard cw20 contract for easy deployment "
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw20-base = { workspace = true }
